--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Christian Ortiz</title>
+    <title>Fizz Buzz: A Coding Project By Christian Ortiz</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="img/svg/CO Corner.svg" class="d-inline-block align-text-center"
-                    width="60" height="25"> APP NAME</a>
+                    width="60" height="25"> Fizz Buzz</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -57,10 +57,10 @@
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">APP NAME: A Coding Project</h1>
-                    <h4 class="lead">Live life one loop at a time. A javascript coding exercise using loops. Write a
-                        program the displays the numbers from 0 to 100. Display the even numbers in
-                        <strong>BOLD.</strong>
+                    <h1 class="display-5 fw-bold lh-1 mb-3">Fizz Buzz: A Coding Project</h1>
+                    <h4 class="lead">When it counts you Fizz Buzz. A javascript coding exercise using loops. Write a program that
+                        prints the numbers from 1 to 100 and for multiples of '3' display "Fizz" instead of
+                        the number and for multiples of '5' display "Buzz". If a multiple of both, display "FizzBuzz".
                     </h4>
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
@@ -100,7 +100,7 @@
         <div class="container-fluid">
             <div class="row row-cols-1 row-cols-lg-3 gy-2">
                 <div class="col text-light order-last order-lg-first d-flex align-items-center">
-                    <div><span class="text-muted">&copy;2021</span> Christian Ortiz | c.ortiz313@gmail.com</div>
+                    <div><span class="text-muted">&copy;2022</span> Christian Ortiz | c.ortiz313@gmail.com</div>
                 </div>
                 <div class="col d-flex align-items-center justify-content-start justify-content-lg-center">
                     <img class="img" src="img/svg/Christian Ortiz NAME logo.svg" alt="Christian Ortiz Logo" height="50">
