--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>Fizz Buzz: A Coding Project By Christian Ortiz</title>
+    <title>Rewind: A Coding Project By Christian Ortiz</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,6 +16,16 @@
     <link href="css/site.css" rel="stylesheet">
     <link rel="icon" type="image/ico" href="img/favicon/favicon.ico">
 
+    <!--Bangers font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+
+    <!--Google Font for IM Fell English-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English&display=swap" rel="stylesheet">
+
 
 </head>
 
@@ -24,8 +34,8 @@
     <!-- ==== Nav Section ==== -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="img/svg/CO Corner.svg" class="d-inline-block align-text-center"
-                    width="60" height="25"> Fizz Buzz</a>
+            <a class="navbar-brand logoFont" href="#"><img src="img/svg/CO Corner.svg" class="d-inline-block align-text-center"
+                    width="60" height="25"> Rewind</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -42,7 +52,7 @@
                         <a class="nav-link" href="code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="#">Git Repo</a>
+                        <a class="nav-link" target="_blank" href="https://github.com/cortiz313/Rewind">Git Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" target="_blank" href="#">About</a>
@@ -57,10 +67,9 @@
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">Fizz Buzz: A Coding Project</h1>
-                    <h4 class="lead">When it counts you Fizz Buzz. A javascript coding exercise using loops. Write a program that
-                        prints the numbers from 1 to 100 and for multiples of '3' display "Fizz" instead of
-                        the number and for multiples of '5' display "Buzz". If a multiple of both, display "FizzBuzz".
+                    <h1 class="display-5 fw-bold lh-1 mb-3 headerFont">Rewind: A Coding Project</h1>
+                    <h4 class="lead"> There and back again. A javascript coding exercise using arrays. Write a 
+                        program that displays a string in reverse.
                     </h4>
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
@@ -88,8 +97,8 @@
                     </h5>
                 </div>
                 <div class="col d-flex align-content-center">
-                    <img src="img/Project 1 - Area 100/Area 100.svg" class="img-fluid center-block d-block mx-auto"
-                        alt="App Logo" width="500" height="500">
+                    <img src="img/Project logo/Rewind.svg" class="img-fluid center-block d-block mx-auto"
+                        alt="Rewind Logo" width="500" height="500">
                 </div>
             </div>
         </div>
