--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>Rewind: A Coding Project By Christian Ortiz</title>
+    <title>Fizz Buzz: A Coding Project By Christian Ortiz</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -33,8 +33,8 @@
     <!-- ==== Nav Section ==== -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand logoFont" href="#"><img src="img/svg/CO Corner.svg"
-                    class="d-inline-block align-text-center" width="60" height="25"> Rewind</a>
+            <a class="navbar-brand logoFont" href="#"><img src="img/Other Logos/CO Corner.svg"
+                    class="d-inline-block align-text-center" width="60" height="25"> Fizz Buzz</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -67,7 +67,7 @@
             <div class="row row-cols-1 row-cols-lg-2">
                 <div class="col">
                     <h1 class="display-5 fw-bold lh-1 mb-3 headerFont">
-                        REWIND: A Coding Project
+                        Fizz Buzz: A Coding Project
                     </h1>
                     <h4 class="lead pb-2 appbody">
                         There and back again. A javascript coding exercise using arrays. Write a program that displays a
@@ -104,7 +104,7 @@
                     <div><span class="text-muted">&copy;2022</span> Christian Ortiz | c.ortiz313@gmail.com</div>
                 </div>
                 <div class="col d-flex align-items-center justify-content-start justify-content-lg-center">
-                    <img class="img" src="img/svg/Christian Ortiz NAME logo.svg" alt="Christian Ortiz Logo" height="50">
+                    <img class="img" src="img/Other Logos/Christian Ortiz NAME logo.svg" alt="Christian Ortiz Logo" height="50">
                 </div>
                 <div class="col d-flex align-items-center justify-content-start justify-content-lg-end">
                     <div class="row">
