--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>Rewind: A Coding Project By Christian Ortiz</title>
+    <title>Fizz Buzz: A Coding Project By Christian Ortiz</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -34,8 +34,8 @@
     <!-- ==== Nav Section ==== -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand logoFont" href="#"><img src="img/svg/CO Corner.svg" class="d-inline-block align-text-center"
-                    width="60" height="25"> Rewind</a>
+            <a class="navbar-brand logoFont" href="#"><img src="img/Other Logos/CO Corner.svg" class="d-inline-block align-text-center"
+                    width="60" height="25"> Fizz Buzz</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -67,7 +67,7 @@
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
-                    <h1 class="display-5 fw-bold lh-1 mb-3 headerFont">Rewind: A Coding Project</h1>
+                    <h1 class="display-5 fw-bold lh-1 mb-3 headerFont">Fizz Buzz: A Coding Project</h1>
                     <h4 class="lead"> There and back again. A javascript coding exercise using arrays. Write a 
                         program that displays a string in reverse.
                     </h4>
@@ -98,7 +98,7 @@
                 </div>
                 <div class="col d-flex align-content-center">
                     <img src="img/Project logo/Rewind.svg" class="img-fluid center-block d-block mx-auto"
-                        alt="Rewind Logo" width="500" height="500">
+                        alt="Fizz Buzz Logo" width="500" height="500">
                 </div>
             </div>
         </div>
@@ -112,7 +112,7 @@
                     <div><span class="text-muted">&copy;2022</span> Christian Ortiz | c.ortiz313@gmail.com</div>
                 </div>
                 <div class="col d-flex align-items-center justify-content-start justify-content-lg-center">
-                    <img class="img" src="img/svg/Christian Ortiz NAME logo.svg" alt="Christian Ortiz Logo" height="50">
+                    <img class="img" src="img/Other Logos/Christian Ortiz NAME logo.svg" alt="Christian Ortiz Logo" height="50">
                 </div>
                 <div class="col d-flex align-items-center justify-content-start justify-content-lg-end">
                     <div class="row">
