Fonts/Colors settled
Updated fonts and colors

--- a/index.html
+++ b/index.html
@@ -16,15 +16,12 @@
     <link href="css/site.css" rel="stylesheet">
     <link rel="icon" type="image/ico" href="img/favicon/favicon.ico">
 
-    <!--Bangers font-->
+    <!--Bangers, IM Fell English, Mouse Memoirs fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
-
-    <!--Google Font for IM Fell English-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Mouse+Memoirs&display=swap" rel="stylesheet">
 
 
 </head>
@@ -68,8 +65,10 @@
             <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
                     <h1 class="display-5 fw-bold lh-1 mb-3 headerFont">Fizz Buzz: A Coding Project</h1>
-                    <h4 class="lead"> There and back again. A javascript coding exercise using arrays. Write a 
-                        program that displays a string in reverse.
+                    <h4 class="lead"> When it counts you Fizz Buzz. A javascript coding exercise using loops.
+                        Write a program that prints the numbers from 1 to 100, and for multiples of '3' display "Fizz"
+                        instead of the number, and for multiples of '5' display "Buzz". If it's a multiple of both
+                        display "FizzBuzz".
                     </h4>
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
@@ -97,7 +96,7 @@
                     </h5>
                 </div>
                 <div class="col d-flex align-content-center">
-                    <img src="img/Project logo/Rewind.svg" class="img-fluid center-block d-block mx-auto"
+                    <img src="img/Fizz Buzz logo/FizzBuzz logo.png" class="img-fluid center-block d-block mx-auto"
                         alt="Fizz Buzz Logo" width="500" height="500">
                 </div>
             </div>
