--- a/app.html
+++ b/app.html
@@ -16,15 +16,12 @@
     <link href="css/site.css" rel="stylesheet">
     <link rel="icon" type="image/ico" href="img/favicon/favicon.ico">
 
-    <!--Bangers font-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
-
-    <!--Google Font for IM Fell English-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English&display=swap" rel="stylesheet">
+     <!--Bangers, IM Fell English, Mouse Memoirs fonts-->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Mouse+Memoirs&display=swap" rel="stylesheet">
 
 </head>
 
@@ -70,8 +67,10 @@
                         Fizz Buzz: A Coding Project
                     </h1>
                     <h4 class="lead pb-2 appbody">
-                        There and back again. A javascript coding exercise using arrays. Write a program that displays a
-                        string in reverse.
+                        When it counts you Fizz Buzz. A javascript coding exercise using loops.
+                        Write a program that prints the numbers from 1 to 100, and for multiples of '3' display "Fizz"
+                        instead of the number, and for multiples of '5' display "Buzz". If it's a multiple of both
+                        display "FizzBuzz".
                     </h4>
                 </div>
                 <div class="col">
