--- a/app.html
+++ b/app.html
@@ -16,12 +16,12 @@
     <link href="css/site.css" rel="stylesheet">
     <link rel="icon" type="image/ico" href="img/favicon/favicon.ico">
 
-     <!--Bangers, IM Fell English, Mouse Memoirs fonts-->
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
-     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English&display=swap" rel="stylesheet">
-     <link href="https://fonts.googleapis.com/css2?family=Mouse+Memoirs&display=swap" rel="stylesheet">
+    <!--Bangers, IM Fell English, Mouse Memoirs fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Mouse+Memoirs&display=swap" rel="stylesheet">
 
 </head>
 
@@ -63,35 +63,70 @@
         <div class="container mt-5">
             <div class="row row-cols-1 row-cols-lg-2">
                 <div class="col">
-                    <h1 class="display-5 fw-bold lh-1 mb-3 headerFont">
-                        Fizz Buzz: A Coding Project
-                    </h1>
-                    <h4 class="lead pb-2 appbody">
-                        When it counts you Fizz Buzz. A javascript coding exercise using loops.
-                        Write a program that prints the numbers from 1 to 100, and for multiples of '3' display "Fizz"
-                        instead of the number, and for multiples of '5' display "Buzz". If it's a multiple of both
-                        display "FizzBuzz".
-                    </h4>
+                    <div class="row">
+                        <h1 class="display-5 fw-bold lh-1 mb-3 headerFont">
+                            Fizz Buzz: A Coding Project
+                        </h1>
+                        <h4 class="lead pb-2 appbody">
+                            When it counts you Fizz Buzz. A javascript coding exercise using loops.
+                            Write a program that prints the numbers from 1 to 100, and for multiples of '3' display
+                            "Fizz"
+                            instead of the number, and for multiples of '5' display "Buzz". If it's a multiple of both
+                            display "FizzBuzz".
+                        </h4>
+                    </div>
+                    <div class="row">
+                        <h2 class="pt-2 instructions">Instructions</h2>
+                        <h5 class="pb-2 instructions">Enter a fizz and a buzz value. Press the button and the values
+                            will appear.</h5>
+                    </div>
                 </div>
-                <div class="col">
-                    <h5 class="border-1 border-bottom border-secondary enterheader">Enter A String to Reverse</h5>
-                    <form class="row gx-3 gy-2">
+
+                <div class="col border-start border-secondary">
+                    <div class="row">
                         <div class="col">
-                            <input id="userString" type="text" class="form-control" placeholder="Enter A String" aria-label="Enter A String">
+                            <h5 class="border-1 enterheader">Enter Fizz Value
+                            </h5>
+                            <form class="row gx-3 gy-2">
+                                <div class="col">
+                                    <input id="fizz" type="number" class="form-control" placeholder="Enter A Number"
+                                        aria-label="Enter A Number">
+                                </div>
+
+                            </form>
                         </div>
+                        <div class="col">
+                            <h5 class="border-1 enterheader pl-2">Enter Buzz Value <!--Find out how to keep the inputs level-->
+                            </h5>
+                            <form class="row gx-3 gy-2">
+                                <div class="col">
+                                    <input id="buzz" type="number" class="form-control" placeholder="Enter A Number"
+                                        aria-label="Enter A Number">
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
                         <div class="col-12">
-                            <button type="button" id="btnSubmit" class="btn">Reverse Me</button>
+                            <button type="button" id="btnSubmit" class="btn float-end">Buzz It</button>
                         </div>
-                        <div class="alert alert-success mt-5 invisible fade show" id="alert" role="alert">
-                            <h4 class="alert-heading">Well Done!</h4>
-                            <hr>
-                            <p class="mb-0" id="msg">
-                                <!--Insert a Message Here-->
-                            </p>
+                    </div>
+                    <div class="row pt-5">
+                        <h1 class="border-1 border-bottom border-secondary enterheader">Results</h1>
+                        <div class="table-responsive tableFont">
+                            <table class="table table-striped table-sm">
+                                <tbody id="results">
+                                   <!--Result Go Here-->
+                                </tbody>
+                            </table>
                         </div>
-                    </form>
+                    </div>
                 </div>
+
             </div>
+
+
+        </div>
         </div>
     </main>
 
@@ -103,7 +138,8 @@
                     <div><span class="text-muted">&copy;2022</span> Christian Ortiz | c.ortiz313@gmail.com</div>
                 </div>
                 <div class="col d-flex align-items-center justify-content-start justify-content-lg-center">
-                    <img class="img" src="img/Other Logos/Christian Ortiz NAME logo.svg" alt="Christian Ortiz Logo" height="50">
+                    <img class="img" src="img/Other Logos/Christian Ortiz NAME logo.svg" alt="Christian Ortiz Logo"
+                        height="50">
                 </div>
                 <div class="col d-flex align-items-center justify-content-start justify-content-lg-end">
                     <div class="row">
