adjusted form fonts

--- a/app.html
+++ b/app.html
@@ -89,7 +89,7 @@
                             </h5>
                             <form class="row gx-3 gy-2">
                                 <div class="col">
-                                    <input id="fizz" type="number" class="form-control" placeholder="Enter A Number"
+                                    <input id="fizz" type="number" class="form-control valueFont" placeholder="Enter A Number"
                                         aria-label="Enter A Number">
                                 </div>
 
@@ -100,7 +100,7 @@
                             </h5>
                             <form class="row gx-3 gy-2">
                                 <div class="col">
-                                    <input id="buzz" type="number" class="form-control" placeholder="Enter A Number"
+                                    <input id="buzz" type="number" class="form-control valueFont" placeholder="Enter A Number"
                                         aria-label="Enter A Number">
                                 </div>
                             </form>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="row mt-3">
                         <div class="col-12">
-                            <button type="button" id="btnSubmit" class="btn float-end">Buzz It</button>
+                            <button type="button" id="btnSubmit" class="btn float-end">BUZZ IT!</button>
                         </div>
                     </div>
                     <div class="row pt-5">
