Updating with small logic tweaks

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </h5>
                 </div>
                 <div class="col d-flex align-content-center">
-                    <img src="img/Fizz Buzz logo/FizzBuzz logo.png" class="img-fluid center-block d-block mx-auto"
+                    <img src="img/Fizz Buzz logo/FizzBuzz logo.svg" class="img-fluid center-block d-block mx-auto"
                         alt="Fizz Buzz Logo" width="500" height="500">
                 </div>
             </div>
