completed and working

--- a/app.html
+++ b/app.html
@@ -159,11 +159,7 @@
     <!--other way to display results-->
     <template id="fbTemplate">
        <tr>
-           <td></td>
-           <td></td>
-           <td></td>
-           <td></td>
-           <td></td>
+           <td></td> <!--index 0, could add more cols by adding more tds-->
        </tr>
     </template>
 
