--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- ==== Nav Section ==== -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand logoFont" href="#"><img src="img/Other Logos/CO Corner.svg" class="d-inline-block align-text-center"
+            <a class="navbar-brand logoFont" href="index.html"><img src="img/Other Logos/CO Corner.svg" class="d-inline-block align-text-center"
                     width="60" height="25"> Fizz Buzz</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,10 +49,10 @@
                         <a class="nav-link" href="code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://github.com/cortiz313/Rewind">Git Repo</a>
+                        <a class="nav-link" target="_blank" href="https://github.com/cortiz313/Fizzbuzz">Git Repo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="#">About</a>
+                        <a class="nav-link" target="_blank" href="https://www.christianortizportfolio.com">About</a>
                     </li>
                 </ul>
             </div>
@@ -116,7 +116,7 @@
                 <div class="col d-flex align-items-center justify-content-start justify-content-lg-end">
                     <div class="row">
                         <!--ADD LINKED IN LATER-->
-                        <!-- <div class="col social"><a href="#" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a> </div> -->
+                        <div class="col social"><a href="https://www.linkedin.com/in/christian-ortiz-628681239?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Br7ipqwVUQZ2wNNkcP8c0Ew%3D%3D" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a> </div>
                         <div class="col social"><a href="https://github.com/cortiz313" target="_blank"><i class="fab fa-github fa-2x"></i></a>
                         </div>
 
