--- a/app.html
+++ b/app.html
@@ -69,10 +69,10 @@
                         </h1>
                         <h4 class="lead pb-2 appbody">
                             When it counts you Fizz Buzz. A javascript coding exercise using loops.
-                            Write a program that prints the numbers from 1 to 100, and for multiples of '3' display
+                            This is a project that prints the numbers from 1 to 100, and for multiples of '3' displays
                             "Fizz"
-                            instead of the number, and for multiples of '5' display "Buzz". If it's a multiple of both
-                            display "FizzBuzz".
+                            instead of the number, and for multiples of '5' displays "Buzz". If it's a multiple of both it
+                            displays "FizzBuzz".
                         </h4>
                     </div>
                     <div class="row">
